establish table with moment and basic text entry

--- a/index.html
+++ b/index.html
@@ -30,26 +30,64 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row justify-content-around">
+      <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">9AM</div>
-        <div class="col-10 bg-light border-bottom border-white"></div>
-        <div class="col-1 bg-info"></div>
-
-
-        <div class="col-12 bg-primary">10AM</div>
-        <div class="col-12 bg-primary">11AM</div>
-        <div class="col-12 bg-primary">12PM</div>
-        <div class="col-12 bg-primary">1PM</div>
-        <div class="col-12 bg-primary">2PM</div>
-        <div class="col-12 bg-primary">3PM</div>
-        <div class="col-12 bg-primary">4PM</div>
-        <div class="col-12 bg-primary">5PM</div>
-
+        <div class="col-10 border-bottom border-white task-input" id="9"></div>
+        <div class="col-1 btn btn-info"><span>Save</span></div>
       </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">10AM</div>
+        <div class="col-10 border-bottom border-white task-input" id="10"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">11AM</div>
+        <div class="col-10 border-bottom border-white" id="11"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">12PM</div>
+        <div class="col-10 border-bottom border-white" id="12"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">1PM</div>
+        <div class="col-10 border-bottom border-white" id="13"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">2PM</div>
+        <div class="col-10 border-bottom border-white" id="14"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">3PM</div>
+        <div class="col-10 border-bottom border-white" id="15"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">4PM</div>
+        <div class="col-10 border-bottom border-white" id="16"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+
+      <div class="row justify-content-around" >
+        <div class="col-1 border-top border-bottom border-right border-dark">5PM</div>
+        <div class="col-10 border-bottom border-white" id="17"></div>
+        <div class="col-1 bg-info"></div>
+      </div>
+      
 
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="./assets/js/script.js"></script>
