--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks go here update textarea to match formatting width 100 etc-->
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">9AM</div>
-        <div class="col-10 border-bottom border-white task-input" id="9"></div>
-        <div class="col-1 btn btn-info"><span>Save</span></div>
+        <div class="col-10 border-bottom border-white"><textarea class="task-input" id="9"></textarea></div>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
