load from local storage working

--- a/index.html
+++ b/index.html
@@ -32,56 +32,56 @@
       <!-- Timeblocks go here update textarea to match formatting width 100 etc-->
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">9AM</div>
-        <div class="col-10 border-bottom border-white"><textarea class="task-input" id="9"></textarea></div>
+        <textarea class="task-input col-10 border-bottom border-white " id="9"></textarea>
         <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">10AM</div>
-        <div class="col-10 border-bottom border-white task-input" id="10"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="10"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">11AM</div>
-        <div class="col-10 border-bottom border-white" id="11"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="11"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">12PM</div>
-        <div class="col-10 border-bottom border-white" id="12"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="12"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">1PM</div>
-        <div class="col-10 border-bottom border-white" id="13"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="13"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">2PM</div>
-        <div class="col-10 border-bottom border-white" id="14"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="14"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">3PM</div>
-        <div class="col-10 border-bottom border-white" id="15"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="15"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">4PM</div>
-        <div class="col-10 border-bottom border-white" id="16"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="16"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
         <div class="col-1 border-top border-bottom border-right border-dark">5PM</div>
-        <div class="col-10 border-bottom border-white" id="17"></div>
-        <div class="col-1 bg-info"></div>
+        <textarea class="task-input col-10 border-bottom border-white" id="17"></textarea>
+        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
       </div>
       
 
