--- a/index.html
+++ b/index.html
@@ -29,59 +29,59 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here update textarea to match formatting width 100 etc-->
+      <!-- Added divs for each timeblock with unique id representing the hour-->
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">9AM</div>
-        <textarea class="task-input col-10 border-bottom border-white " id="9"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <div class="col-1 hour">9AM</div>
+        <textarea class="task-input col-10 border-bottom border-white" id="9"></textarea>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">10AM</div>
+        <div class="col-1 hour">10AM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="10"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">11AM</div>
+        <div class="col-1 hour">11AM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="11"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">12PM</div>
+        <div class="col-1 hour">12PM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="12"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">1PM</div>
+        <div class="col-1 hour">1PM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="13"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">2PM</div>
+        <div class="col-1 hour">2PM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="14"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">3PM</div>
+        <div class="col-1 hour">3PM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="15"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">4PM</div>
+        <div class="col-1 hour">4PM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="16"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <div class="row justify-content-around" >
-        <div class="col-1 border-top border-bottom border-right border-dark">5PM</div>
+        <div class="col-1 hour">5PM</div>
         <textarea class="task-input col-10 border-bottom border-white" id="17"></textarea>
-        <button class="col-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="col-1 btn save-button saveBtn"><i class="fas fa-save"></i></button>
       </div>
       
 
